syntax = "proto3";
import "ConstBackpackTableItemEx.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstBackpackTableProtobuf";

message	ConstBackpackTable  {
	repeated	ConstBackpackTableItemEx	items = 1;
}